[gd_scene load_steps=20 format=3 uid="uid://ca0wevg1lb4rx"]

[ext_resource type="Script" path="res://assets/maps/map_blocks/WaterMaker3D/WaterMaker3D.gd" id="1_7s6ww"]
[ext_resource type="Shader" path="res://assets/shaders/waters/water3d202409.gdshader" id="1_shk2g"]
[ext_resource type="Texture2D" uid="uid://c17swbjodnlcl" path="res://assets/textures/water/spume_normal_512.png" id="2_l7ua0"]
[ext_resource type="Texture2D" uid="uid://dmsyagyieahoy" path="res://assets/textures/water/Ocean_normal_512.png" id="3_rxtgm"]
[ext_resource type="Texture2D" uid="uid://bye687yl2sesr" path="res://assets/textures/water/spume_mask_512.png" id="4_3wf25"]
[ext_resource type="Shader" path="res://assets/shaders/waters/CameraWaterOverlay.gdshader" id="5_536xd"]

[sub_resource type="BoxMesh" id="BoxMesh_paeh5"]
resource_local_to_scene = true
size = Vector3(10, 1, 10)
subdivide_width = 10
subdivide_depth = 10

[sub_resource type="FastNoiseLite" id="FastNoiseLite_k6yyt"]
frequency = 0.03

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_uowjy"]
seamless = true
noise = SubResource("FastNoiseLite_k6yyt")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_3wsdx"]
frequency = 0.0011

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_skxl6"]
width = 64
height = 64
seamless = true
seamless_blend_skirt = 1.0
noise = SubResource("FastNoiseLite_3wsdx")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_h8wdc"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_fewrn"]
seamless = true
noise = SubResource("FastNoiseLite_h8wdc")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ah3vf"]
noise_type = 3
frequency = 0.02
fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_4w8fl"]
seamless = true
noise = SubResource("FastNoiseLite_ah3vf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lajrr"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_shk2g")
shader_parameter/color_surface = Color(0.2, 1, 1, 1)
shader_parameter/color_shallow = Color(0.5, 0.916667, 1, 1)
shader_parameter/color_deep = Color(0.27, 0.585, 0.9, 1)
shader_parameter/roughness = 0.04
shader_parameter/specular = 0.4
shader_parameter/refraction = 0.3
shader_parameter/refraction_lod = 2.5
shader_parameter/refraction_texture_channel = Vector4(0.01, 0.01, 0.01, 0.01)
shader_parameter/texture_refraction = SubResource("NoiseTexture2D_fewrn")
shader_parameter/normal_scale = 0.5
shader_parameter/normal_uv_scale = 0.3
shader_parameter/normal_noise_scale = 1.0
shader_parameter/normal_noise_lod = 4.0
shader_parameter/normal_noise_angle = 3.14159
shader_parameter/texture_normal = ExtResource("3_rxtgm")
shader_parameter/texture_normal_noise1 = SubResource("NoiseTexture2D_skxl6")
shader_parameter/texture_normal_noise2 = SubResource("NoiseTexture2D_skxl6")
shader_parameter/uv1_scale = Vector3(0.1, 0.1, 0.1)
shader_parameter/uv2_scale = Vector3(0.01, 0.01, 0.01)
shader_parameter/uv1_speed = Vector3(0.01, 0.01, 0.01)
shader_parameter/uv2_speed = Vector3(0.002, 0.005, 0.01)
shader_parameter/wave_speed = 0.01
shader_parameter/wave_noise_scale = 30.0
shader_parameter/wave_height_scale = 0.1
shader_parameter/wave = SubResource("NoiseTexture2D_4w8fl")
shader_parameter/surface_beers_law = 0.4
shader_parameter/surface_depth_offset = -0.75
shader_parameter/beers_law = 0.4
shader_parameter/depth_offset = -0.75
shader_parameter/surface_scale = 3.0
shader_parameter/depth_multi = 6.0
shader_parameter/depth_blend_powor = 0.5
shader_parameter/depth_lod = 1.5
shader_parameter/depth_color_add = 0.15
shader_parameter/depth_color_mix = 0.15
shader_parameter/spume_color = Color(1, 1, 1, 1)
shader_parameter/spume_scale = 0.6
shader_parameter/spume_uv_scale = Vector3(0.25, 0.25, 0.25)
shader_parameter/spume_uv_speed = Vector3(0.01, 0.01, 0.01)
shader_parameter/spume_lod = 6.0
shader_parameter/spume_fade_lod_min = 5.0
shader_parameter/spume_fade_lod_max = 200.0
shader_parameter/spume_ues_depth = false
shader_parameter/texture_edge_noise = SubResource("NoiseTexture2D_uowjy")
shader_parameter/texture_spume = ExtResource("4_3wf25")
shader_parameter/normal_spume = ExtResource("2_l7ua0")
shader_parameter/distance_fade_min = 2000.0
shader_parameter/distance_fade_max = 3000.0
shader_parameter/ues_near_fade = false
shader_parameter/near_fade_min = 0.2
shader_parameter/near_fade_max = 0.22

[sub_resource type="SphereShape3D" id="SphereShape3D_yfdbl"]
radius = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ccyp1"]
resource_local_to_scene = true
shader = ExtResource("5_536xd")
shader_parameter/color = Color(0.501961, 0.917647, 1, 1)
shader_parameter/value_all = 1.0
shader_parameter/ripple_speed = 1.0
shader_parameter/ripple_density = 5.0
shader_parameter/ripple_strength = 0.01
shader_parameter/blur_radius = 0.05
shader_parameter/blur_count = 1.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_dcd7l"]

[node name="WaterMaker3D" type="CSGMesh3D"]
process_mode = 1
collision_layer = 512
collision_mask = 1025
mesh = SubResource("BoxMesh_paeh5")
material = SubResource("ShaderMaterial_lajrr")
script = ExtResource("1_7s6ww")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]

[node name="SwimmableArea3D" type="Area3D" parent="." groups=["water_area"]]
collision_layer = 512
collision_mask = 1057
gravity_point_center = Vector3(0, 1, 0)
gravity_direction = Vector3(0, 1, 0)
linear_damp = 0.5
angular_damp = 0.5

[node name="CameraPosShapeCast3D" type="ShapeCast3D" parent="."]
enabled = false
shape = SubResource("SphereShape3D_yfdbl")
exclude_parent = false
target_position = Vector3(0, 0, 0)
collision_mask = 512
collide_with_areas = true

[node name="WaterRippleOverlay" type="TextureRect" parent="."]
visible = false
z_index = -10
z_as_relative = false
material = SubResource("ShaderMaterial_ccyp1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("PlaceholderTexture2D_dcd7l")

[connection signal="area_entered" from="SwimmableArea3D" to="." method="_on_swimmable_area_3d_area_entered"]
[connection signal="area_exited" from="SwimmableArea3D" to="." method="_on_swimmable_area_3d_area_exited"]
[connection signal="body_entered" from="SwimmableArea3D" to="." method="_on_swimmable_area_3d_body_entered"]
[connection signal="body_exited" from="SwimmableArea3D" to="." method="_on_swimmable_area_3d_body_exited"]
